--- a/customer/dashboard.html
+++ b/customer/dashboard.html
@@ -157,7 +157,7 @@
                                 <!-- Order Card 1 -->
                                 <div class="order-card">
                                     <div class="order-header">
-                                        <div class="order-number">Order #ORD-2023-0012</div>
+                                        <div class="order-number">Order #OE-125255</div>
                                         <div class="order-date">Jun 15, 2023</div>
                                     </div>
                                     <div class="order-status status-shipped">Shipped</div>
@@ -185,7 +185,7 @@
                                 <!-- Order Card 2 -->
                                 <div class="order-card">
                                     <div class="order-header">
-                                        <div class="order-number">Order #ORD-2023-0011</div>
+                                        <div class="order-number">Order #OE-125256</div>
                                         <div class="order-date">Jun 10, 2023</div>
                                     </div>
                                     <div class="order-status status-processing">Processing</div>
@@ -213,7 +213,7 @@
                                 <!-- Order Card 3 -->
                                 <div class="order-card">
                                     <div class="order-header">
-                                        <div class="order-number">Order #ORD-2023-0010</div>
+                                        <div class="order-number">Order #OE-125257</div>
                                         <div class="order-date">May 28, 2023</div>
                                     </div>
                                     <div class="order-status status-delivered">Delivered</div>
