Customer Settings page

--- a/customer/dashboard.html
+++ b/customer/dashboard.html
@@ -6,10 +6,10 @@
     <title>Customer Dashboard - Pinpoint</title>
     <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="../utilities.css">
+    <link rel="stylesheet" href="assets/styles/sidebar.css">
     <link rel="stylesheet" href="dashboard.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
-
 </head>
 
 <body>
@@ -35,7 +35,12 @@
                                 <span class="menu-text">Dashboard</span>
                             </a>
                         </li>
-                     
+                        <li>
+                            <a href="settings.html" data-title="Settings">
+                                <svg class="icon"  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M10.325 4.317c.426 -1.756 2.924 -1.756 3.35 0a1.724 1.724 0 0 0 2.573 1.066c1.543 -.94 3.31 .826 2.37 2.37a1.724 1.724 0 0 0 1.065 2.572c1.756 .426 1.756 2.924 0 3.35a1.724 1.724 0 0 0 -1.066 2.573c.94 1.543 -.826 3.31 -2.37 2.37a1.724 1.724 0 0 0 -2.572 1.065c-.426 1.756 -2.924 1.756 -3.35 0a1.724 1.724 0 0 0 -2.573 -1.066c-1.543 .94 -3.31 -.826 -2.37 -2.37a1.724 1.724 0 0 0 -1.065 -2.572c-1.756 -.426 -1.756 -2.924 0 -3.35a1.724 1.724 0 0 0 1.066 -2.573c-.94 -1.543 .826 -3.31 2.37 -2.37c1 .608 2.296 .07 2.572 -1.065z" /><path d="M9 12a3 3 0 1 0 6 0a3 3 0 0 0 -6 0" /></svg>
+                                <span class="menu-text">Settings</span>
+                            </a>
+                        </li>
                     </ul>
                 </nav>
             </div>
@@ -207,7 +212,6 @@
                                         <span>Total:</span>
                                         <span class="amount">$845.00</span>
                                     </div>
-                                  
                                 </div>
 
                                 <!-- Order Card 3 -->
@@ -291,7 +295,7 @@
         </div>
     </div>
 
-    <script src="../dashboard.js"></script>
+    <script src="assets/scripts/sidebar.js"></script>
     <script>
 
         // Initialize user dropdown
