--- a/customer/dashboard.html
+++ b/customer/dashboard.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="../utilities.css">
     <link rel="stylesheet" href="assets/styles/sidebar.css">
     <link rel="stylesheet" href="dashboard.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
 </head>
 
@@ -21,7 +20,12 @@
                     <img src="../assets/images/pinpoint_logo.png" alt="Pinpoint Logo">
                     <h4>Customer Portal</h4>
                 </div>
-                
+                <button id="closeSidebar" class="close-sidebar-btn" aria-label="Close sidebar">
+                    <svg class="icon" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <line x1="18" y1="6" x2="6" y2="18"></line>
+                        <line x1="6" y1="6" x2="18" y2="18"></line>
+                    </svg>
+                </button>
             </div>
             <div class="sidebar-content">
                 <nav class="sidebar-nav">
