--- a/dashboard.html
+++ b/dashboard.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="utilities.css">
     <link rel="stylesheet" href="dashboard.css">
+    <link rel="stylesheet" href="assets/css/sidebar-menu.css">
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+    <script src="assets/js/sidebar-menu.js" defer></script>
 </head>
 
 <body>
