--- a/dashboard.html
+++ b/dashboard.html
@@ -8,9 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="utilities.css">
     <link rel="stylesheet" href="dashboard.css">
-    <link rel="stylesheet" href="assets/css/sidebar-menu.css">
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
-    <script src="assets/js/sidebar-menu.js" defer></script>
 </head>
 
 <body>
@@ -81,8 +79,8 @@
                                 <span class="menu-text">Vendors</span>
                             </a>
                         </li>
-                        <li>
-                            <a href="#" data-title="Reports">
+<li class="has-submenu">
+    <a href="#" data-title="Reports">
                                 <svg class="icon" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"
                                     stroke-linecap="round" stroke-linejoin="round">
                                     <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
@@ -93,6 +91,83 @@
                                 </svg>
                                 <span class="menu-text">Reports</span>
                             </a>
+    <ul class="submenu">
+        <li><a href="#">Orders</a></li>
+        <li><a href="#">Vendors</a></li>
+        <li class="has-submenu"><a href="#">Customers</a>
+            <ul class="submenu">
+                <li><a href="#">Details</a></li>
+                <li><a href="#">Shipping Address</a></li>
+            </ul>
+        </li>
+        <li class="has-submenu"><a href="#">BBR Reports</a>
+            <ul class="submenu">
+                <li><a href="#">Jacket Report</a></li>
+                <li><a href="#">Jacket Shipping Report</a></li>
+                <li><a href="#">Order Contanct Report</a></li>
+            </ul>
+        </li>
+        <li><a href="#">Delivery Status</a></li>
+    </ul>
+                        </li>
+                        <li>
+                            <a href="#" data-title="Bright Store Management">
+                                <svg class="icon" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"
+                                    stroke-linecap="round" stroke-linejoin="round">
+                                    <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
+                                    <polyline points="14 2 14 8 20 8"></polyline>
+                                    <polyline points="16 13 8 13"></polyline>
+                                    <line x1="16" y1="17" x2="8" y2="17"></line>
+                                    <polyline points="10 9 9 9 8 9"></polyline>
+                                </svg>
+                                <span class="menu-text">Bright Store Manangement</span>
+                            </a>
+                            <ul class="submenu">
+                                <li><a href="#">Fetch Orders</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#" data-title="Utilities">
+                                <svg class="icon" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"
+                                    stroke-linecap="round" stroke-linejoin="round">
+                                    <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
+                                    <polyline points="14 2 14 8 20 8"></polyline>
+                                    <polyline points="16 13 8 13"></polyline>
+                                    <line x1="16" y1="17" x2="8" y2="17"></line>
+                                    <polyline points="10 9 9 9 8 9"></polyline>
+                                </svg>
+                                <span class="menu-text">Utilities</span>
+                            </a>
+                            <ul class="submenu">
+                                <li><a href="#">Artwork Library</a>
+                                    <ul class="submenu">
+                                        <li><a href="#">Logos</a></li>
+                                        <li><a href="#">Text</a></li>
+                                    </ul>
+                                </li>
+                                <li><a href="#">Holiday List</a></li>
+                                <li><a href="#">Default Values</a></li>
+                                <li><a href="#">Notes</a></li>
+                                <li><a href="#">Mail Recipients</a></li>
+                                <li><a href="#">Item Reminder Rules</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#" data-title="T-Hub Integrations">
+                                <svg class="icon" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"
+                                    stroke-linecap="round" stroke-linejoin="round">
+                                    <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
+                                    <polyline points="14 2 14 8 20 8"></polyline>
+                                    <polyline points="16 13 8 13"></polyline>
+                                    <line x1="16" y1="17" x2="8" y2="17"></line>
+                                    <polyline points="10 9 9 9 8 9"></polyline>
+                                </svg>
+                                <span class="menu-text">T-Hub Integrations</span>
+                            </a>
+                            <ul class="submenu">
+                                <li><a href="#">USA E-Pay to T-Hub</a></li>
+                                <li><a href="#">Lightspeed to T-Hub</a></li>
+                            </ul>
                         </li>
                     </ul>
                 </nav>
@@ -574,7 +649,9 @@
         </div>
     </div>
 
+    <script src="assets/scripts/sidebar.js"></script>
     <script src="dashboard.js"></script>
+    <script src="assets/scripts/sidebar.js"></script>
     <script>
     document.addEventListener('DOMContentLoaded', function () {
         // Sales data
