Customer Portal: Files organization & Profile page optimization

--- a/customer/dashboard.html
+++ b/customer/dashboard.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Customer Dashboard - Pinpoint</title>
-    <link rel="stylesheet" href="../styles.css">
-    <link rel="stylesheet" href="../utilities.css">
+    <link rel="stylesheet" href="assets/styles/styles.css">
+    <link rel="stylesheet" href="assets/styles/utilities.css">
     <link rel="stylesheet" href="assets/styles/sidebar.css">
-    <link rel="stylesheet" href="dashboard.css">
+    <link rel="stylesheet" href="assets/styles/dashboard.css">
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="assets/styles/sidebar.css">
@@ -103,7 +103,7 @@
                         <button class="btn btn-primary">Place New Order</button>
                     </div>
                     <div class="welcome-illustration">
-                        <i class="fas fa-box-open"></i>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 3l8 4.5l0 9l-8 4.5l-8 -4.5l0 -9l8 -4.5" /><path d="M12 12l8 -4.5" /><path d="M12 12l0 9" /><path d="M12 12l-8 -4.5" /><path d="M16 5.25l-8 4.5" /></svg>
                     </div>
                 </div> -->
 
@@ -112,7 +112,7 @@
                     <div class="pui-col-md-4">
                         <div class="card stat-card">
                             <div class="stat-icon" style="background-color: #e3f2fd;">
-                                <i class="fas fa-shopping-cart" style="color: #1976d2;"></i>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="#1976d2" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M6 19m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" /><path d="M17 19m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" /><path d="M17 17h-11v-14h-2" /><path d="M6 5l14 1l-1 7h-13" /></svg>
                             </div>
                             <div class="stat-details">
                                 <span class="stat-value">12</span>
@@ -123,7 +123,7 @@
                     <div class="pui-col-md-4">
                         <div class="card stat-card">
                             <div class="stat-icon" style="background-color: #e8f5e9;">
-                                <i class="fas fa-check-circle" style="color: #388e3c;"></i>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="#388e3c" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" /><path d="M9 12l2 2l4 -4" /></svg>
                             </div>
                             <div class="stat-details">
                                 <span class="stat-value">45</span>
@@ -134,7 +134,7 @@
                     <div class="pui-col-md-4">
                         <div class="card stat-card">
                             <div class="stat-icon" style="background-color: #fff3e0;">
-                                <i class="fas fa-file-invoice-dollar" style="color: #f57c00;"></i>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="#f57c00" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M5 21v-16a2 2 0 0 1 2 -2h10a2 2 0 0 1 2 2v16l-3 -2l-2 2l-2 -2l-2 2l-2 -2l-3 2" /><path d="M14 8h-2.5a1.5 1.5 0 0 0 0 3h1a1.5 1.5 0 0 1 0 3h-2.5m2 0v1.5m0 -9v1.5" /></svg>
                             </div>
                             <div class="stat-details">
                                 <span class="stat-value">3</span>
@@ -160,7 +160,7 @@
                                     </div>
                                     <div class="order-status status-shipped">Shipped</div>
                                     <div class="tracking-number">
-                                        <i class="fas fa-truck"></i>
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M7 17m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" /><path d="M17 17m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" /><path d="M5 17h-2v-11a1 1 0 0 1 1 -1h9v12m-4 0h6m4 0h2v-6h-8m0 -5h5l3 5" /></svg>
                                         <span>Tracking #:<a href="#"> 1Z999AA1234567890</a></span>
                                     </div>
                                     <div class="order-items">
@@ -188,7 +188,7 @@
                                     </div>
                                     <div class="order-status status-processing">Processing</div>
                                     <div class="tracking-number">
-                                        <i class="fas fa-box"></i>
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 3l8 4.5l0 9l-8 4.5l-8 -4.5l0 -9l8 -4.5" /><path d="M12 12l8 -4.5" /><path d="M12 12l0 9" /><path d="M12 12l-8 -4.5" /></svg>
                                         <span>Tracking #: <a href="#"> Not available yet</a></span>
                                     </div>
                                     <div class="order-items">
@@ -215,7 +215,7 @@
                                     </div>
                                     <div class="order-status status-delivered">Delivered</div>
                                     <div class="tracking-number">
-                                        <i class="fas fa-check-circle"></i>
+                                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-circle-check" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" /><path d="M9 12l2 2l4 -4" /></svg>
                                         <span>Delivered on May 30, 2023</span>
                                     </div>
                                     <div class="order-items">
@@ -258,25 +258,25 @@
                             <div class="quick-actions">
                                 <a href="new-order.html" class="quick-action">
                                     <div class="action-icon" style="background-color: #e3f2fd;">
-                                        <i class="fas fa-plus" style="color: #1976d2;"></i>
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="#1976d2" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 5l0 14" /><path d="M5 12l14 0" /></svg>
                                     </div>
                                     <span>New Order</span>
                                 </a>
                                 <a href="request-quote.html" class="quick-action">
                                     <div class="action-icon" style="background-color: #e8f5e9;">
-                                        <i class="fas fa-file-invoice" style="color: #388e3c;"></i>
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="#388e3c" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M5 21v-16a2 2 0 0 1 2 -2h10a2 2 0 0 1 2 2v16l-3 -2l-2 2l-2 -2l-2 2l-2 -2l-3 2m4 -14h6m-6 4h6m-2 4h2" /></svg>
                                     </div>
                                     <span>Request Quote</span>
                                 </a>
                                 <a href="track-order.html" class="quick-action">
                                     <div class="action-icon" style="background-color: #fff3e0;">
-                                        <i class="fas fa-truck" style="color: #f57c00;"></i>
+                                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-truck" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="#f57c00" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M7 17m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" /><path d="M17 17m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" /><path d="M5 17h-2v-11a1 1 0 0 1 1 -1h9v12m-4 0h6m4 0h2v-6h-8m0 -5h5l3 5" /></svg>
                                     </div>
                                     <span>Track Order</span>
                                 </a>
                                 <a href="support.html" class="quick-action">
                                     <div class="action-icon" style="background-color: #f3e5f5;">
-                                        <i class="fas fa-headset" style="color: #8e24aa;"></i>
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="#8e24aa" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4 14v-3a8 8 0 1 1 16 0v3" /><path d="M18 19c0 1.657 -2.686 3 -6 3" /><path d="M4 14a2 2 0 0 1 2 -2h1a2 2 0 0 1 2 2v3a2 2 0 0 1 -2 2h-1a2 2 0 0 1 -2 -2v-3z" /><path d="M15 14a2 2 0 0 1 2 -2h1a2 2 0 0 1 2 2v3a2 2 0 0 1 -2 2h-1a2 2 0 0 1 -2 -2v-3z" /></svg>
                                     </div>
                                     <span>Get Support</span>
                                 </a>
