--- a/login.html
+++ b/login.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Pinpoint Order Details</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="utilities.css">
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="assets/styles/styles.css">
+    <link rel="stylesheet" href="assets/styles/utilities.css">
+    <link rel="stylesheet" href="assets/styles/login.css">
 </head>
 
 <body>
@@ -56,7 +56,7 @@
         </div>
     </div>
 
-    <script src="login.js"></script>
+    <script src="assets/scripts/login.js"></script>
 </body>
 
 </html>
