--- a/artwork-library-logos.html
+++ b/artwork-library-logos.html
@@ -76,7 +76,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="order-entry.html" data-title="Order Entry">
+                            <a href="orders.html" data-title="Orders">
                                 <svg class="icon" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"
                                     stroke-linecap="round" stroke-linejoin="round">
                                     <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
@@ -299,7 +299,7 @@
                 
                 <div class="listing-header">
                    <div class="listing-header-left">
-                    <nav class="breadcrumb pui-mb-5px" aria-label="breadcrumb">
+                    <nav class="breadcrumb" aria-label="breadcrumb">
                         <a href="dashboard.html" class="pui-link">
                             <svg class="icon" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
