--- a/order-entry.html
+++ b/order-entry.html
@@ -45,7 +45,7 @@
                             </a>
                         </li>
                         <li class="active">
-                            <a href="order-entry.html" data-title="Order Entry">
+                            <a href="orders.html" data-title="Orders">
                                 <svg class="icon" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"
                                     stroke-linecap="round" stroke-linejoin="round">
                                     <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
@@ -7956,6 +7956,9 @@ Monograms is not responsible for damages to customer provided items. There is an
             <script src="assets/scripts/email-receipt.js"></script>
             <script src="assets/scripts/order-notes.js"></script>
             <script src="assets/scripts/sidebar.js"></script>
+            <script src="assets/scripts/order-entry.js"></script>
+            <script src="assets/scripts/box-management.js"></script>
+            <script src="assets/scripts/item-fees.js"></script>
             <script>
                 // Toggle credit card selection visibility based on payment method
                 document.addEventListener('DOMContentLoaded', function () {
