--- a/dashboard.html
+++ b/dashboard.html
@@ -43,7 +43,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="order-entry.html" data-title="Order Entry">
+                            <a href="orders.html" data-title="Orders">
                                 <svg class="icon" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"
                                     stroke-linecap="round" stroke-linejoin="round">
                                     <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
