--- a/dashboard.html
+++ b/dashboard.html
@@ -191,7 +191,7 @@
                                             </a>
                                             <ul class="submenu">
                                                 <li><a href="artwork-library-logos.html" class="menu-item">Logos</a></li>
-                                                <li><a href="#" class="menu-item">Text</a></li>
+                                                <li><a href="artwork-library-text.html" class="menu-item">Text</a></li>
                                             </ul>
                                         </li>
                                         <li><a href="#" class="menu-item">Holiday List</a></li>
