--- a/customer/profile.html
+++ b/customer/profile.html
@@ -129,13 +129,13 @@
                             <ul>
                                 <li class="active" data-tab="account">
                                     <a href="#account">
-                                        <i class="fas fa-user"></i>
-                                        <span>Account</span>
+                                        <i class="fas fa-building"></i>
+                                        <span>Company & Billing</span>
                                     </a>
                                 </li>
                                 <li data-tab="billing">
                                     <a href="#billing">
-                                        <i class="fas fa-credit-card"></i>
+                                        <i class="fas fa-truck"></i>
                                         <span>Shipping Details</span>
                                     </a>
                                 </li>
