--- a/customer/profile.html
+++ b/customer/profile.html
@@ -359,7 +359,7 @@
 <div class="pui-row pui-mb-10px">
     <div class="pui-col-md-12">
         <button id="openAddAddressModal" class="pui-btn pui-btn-primary">
-            <i class="fas fa-plus pui-me-5px"></i> Add New Address
+            <i class="fas fa-plus pui-me-5px"></i> Add New Shipping Address 
         </button>
     </div>
 </div>
@@ -669,7 +669,7 @@
     <div id="addAddressModal" class="modal" style="display: none;">
         <div class="modal-content" style="max-width: 700px;">
             <div class="modal-header">
-                <h4>Add New Address</h4>
+                <h4>Add New Shipping Address</h4>
                 <span class="close-modal">&times;</span>
             </div>
             <div class="modal-body">
