--- a/artwork-library-logos.html
+++ b/artwork-library-logos.html
@@ -89,7 +89,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#" data-title="Customers">
+                            <a href="customers.html" data-title="Customers">
                                 <svg class="icon" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"
                                     stroke-linecap="round" stroke-linejoin="round">
                                     <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
@@ -101,7 +101,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#" data-title="Vendors">
+                            <a href="vendors.html" data-title="Vendors">
                                 <svg class="icon" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"
                                     stroke-linecap="round" stroke-linejoin="round">
                                     <path
