--- a/customer/profile.html
+++ b/customer/profile.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="assets/styles/utilities.css">
     <link rel="stylesheet" href="assets/styles/header.css">
     <link rel="stylesheet" href="assets/styles/sidebar.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/dist/tabler-icons.min.css">
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
 </head>
 
@@ -129,25 +129,47 @@
                             <ul>
                                 <li class="active" data-tab="account">
                                     <a href="#account">
-                                        <i class="fas fa-building"></i>
+                                        <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                            <path d="M3 21l18 0"></path>
+                                            <path d="M5 21v-14l8 -4v18"></path>
+                                            <path d="M19 21v-10l-6 -4"></path>
+                                            <path d="M9 9l0 .01"></path>
+                                            <path d="M9 12l0 .01"></path>
+                                            <path d="M9 15l0 .01"></path>
+                                        </svg>
                                         <span>Company & Billing</span>
                                     </a>
                                 </li>
                                 <li data-tab="billing">
                                     <a href="#billing">
-                                        <i class="fas fa-truck"></i>
+                                        <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                            <path d="M7 17m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0"></path>
+                                            <path d="M17 17m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0"></path>
+                                            <path d="M5 17h-2v-6l2 -5h9l4 5h1a2 2 0 0 1 2 2v4h-2m-4 0h-6m-6 -6h15m-6 0v-5h3l3 5"></path>
+                                        </svg>
                                         <span>Shipping Details</span>
                                     </a>
                                 </li>
                                 <li data-tab="taxExempt">
                                     <a href="#taxExempt">
-                                        <i class="fas fa-dollar-sign"></i>
+                                        <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                            <path d="M16.7 8a3 3 0 0 0 -2.7 -2h-4a3 3 0 0 0 0 6h4a3 3 0 0 1 0 6h-4a3 3 0 0 1 -2.7 -2"></path>
+                                            <path d="M12 3v3m0 12v3"></path>
+                                        </svg>
                                         <span>Tax Information</span>
                                     </a>
                                 </li>
                                 <li data-tab="password">
                                     <a href="#password">
-                                        <i class="fas fa-lock"></i>
+                                        <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                            <path d="M5 13a2 2 0 0 1 2 -2h10a2 2 0 0 1 2 2v6a2 2 0 0 1 -2 2h-10a2 2 0 0 1 -2 -2v-6z"></path>
+                                            <path d="M11 16a1 1 0 1 0 2 0a1 1 0 0 0 -2 0"></path>
+                                            <path d="M8 11v-4a4 4 0 1 1 8 0v4"></path>
+                                        </svg>
                                         <span>Password</span>
                                     </a>
                                 </li>
@@ -359,7 +381,12 @@
 <div class="pui-row pui-mb-10px">
     <div class="pui-col-md-12">
         <button id="openAddAddressModal" class="pui-btn pui-btn-primary">
-            <i class="fas fa-plus pui-me-5px"></i> Add New Shipping Address 
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon pui-me-5px" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                <path d="M12 5l0 14"></path>
+                <path d="M5 12l14 0"></path>
+            </svg>
+            Add New Shipping Address 
         </button>
     </div>
 </div>
@@ -381,10 +408,22 @@
                 <div class="address-actions">
                     <span class="default-badge">Default</span>
                     <button class="btn-icon edit-address" data-address-id="billing_1" title="Edit">
-                        <i class="fas fa-edit"></i>
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                            <path d="M7 7h-1a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-1"></path>
+                            <path d="M20.385 6.585a2.1 2.1 0 0 0 -2.97 -2.97l-8.415 8.385v3h3l8.385 -8.415z"></path>
+                            <path d="M16 5l3 3"></path>
+                        </svg>
                     </button>
                     <button class="btn-icon delete-address" data-address-id="billing_1" title="Delete">
-                        <i class="fas fa-trash"></i>
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                            <path d="M4 7l16 0"></path>
+                            <path d="M10 11l0 6"></path>
+                            <path d="M14 11l0 6"></path>
+                            <path d="M5 7l1 12a2 2 0 0 0 2 2h8a2 2 0 0 0 2 -2l1 -12"></path>
+                            <path d="M9 7v-3a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v3"></path>
+                        </svg>
                     </button>
                 </div>
             </div>
@@ -410,10 +449,22 @@
                         Mark as Default
                     </button>
                     <button class="btn-icon edit-address" data-address-id="billing_1" title="Edit">
-                        <i class="fas fa-edit"></i>
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                            <path d="M7 7h-1a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-1"></path>
+                            <path d="M20.385 6.585a2.1 2.1 0 0 0 -2.97 -2.97l-8.415 8.385v3h3l8.385 -8.415z"></path>
+                            <path d="M16 5l3 3"></path>
+                        </svg>
                     </button>
                     <button class="btn-icon delete-address" data-address-id="billing_1" title="Delete">
-                        <i class="fas fa-trash"></i>
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                            <path d="M4 7l16 0"></path>
+                            <path d="M10 11l0 6"></path>
+                            <path d="M14 11l0 6"></path>
+                            <path d="M5 7l1 12a2 2 0 0 0 2 2h8a2 2 0 0 0 2 -2l1 -12"></path>
+                            <path d="M9 7v-3a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v3"></path>
+                        </svg>
                     </button>
                 </div>
             </div>
@@ -516,7 +567,11 @@
                                             <div class="password-input">
                                                 <input type="password" id="newPassword" class="form-control">
                                                 <button type="button" class="toggle-password" data-target="newPassword">
-                                                    <i class="far fa-eye"></i>
+                                                    <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                                        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                                        <path d="M10 12a2 2 0 1 0 4 0a2 2 0 0 0 -4 0"></path>
+                                                        <path d="M21 12c-2.4 4 -5.4 6 -9 6c-3.6 0 -6.6 -2 -9 -6c2.4 -4 5.4 -6 9 -6c3.6 0 6.6 2 9 6"></path>
+                                                    </svg>
                                                 </button>
                                             </div>
                                         </div>
@@ -526,7 +581,11 @@
                                                 <input type="password" id="confirmPassword" class="form-control">
                                                 <button type="button" class="toggle-password"
                                                     data-target="confirmPassword">
-                                                    <i class="far fa-eye"></i>
+                                                    <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                                        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                                        <path d="M10 12a2 2 0 1 0 4 0a2 2 0 0 0 -4 0"></path>
+                                                        <path d="M21 12c-2.4 4 -5.4 6 -9 6c-3.6 0 -6.6 -2 -9 -6c2.4 -4 5.4 -6 9 -6c3.6 0 6.6 2 9 6"></path>
+                                                    </svg>
                                                 </button>
                                             </div>
                                         </div>
