--- a/dashboard.html
+++ b/dashboard.html
@@ -264,18 +264,11 @@
 
                                 </li>
 
-                                <li class="has-submenu"><a href="attribute-tables.html" class="menu-item">Attribute
+                                <li><a href="attribute-tables.html" class="menu-item">Attribute
                                         Tables
-                                        <svg class="menu-arrow" width="16" height="16" viewBox="0 0 24 24" fill="none"
-                                            stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                            stroke-linejoin="round">
-                                            <polyline points="9 18 15 12 9 6"></polyline>
-                                        </svg>
+                                       
                                     </a>
-                                    <ul class="submenu">
-                                        <li><a href="attribute-tables-accounting.html" class="menu-item">Accounting</a>
-                                        </li>
-                                    </ul>
+                                   
                                 </li>
 
 
