--- a/customers.html
+++ b/customers.html
@@ -93,6 +93,21 @@
                                 <span class="menu-text">Products</span>
                             </a>
                         </li>
+                        <!-- Shipping Manager -->
+                        <li>
+                            <a href="shipping-manager.html" data-title="Shipping Manager">
+                                <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                    viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                                    stroke-linecap="round" stroke-linejoin="round">
+                                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                    <path d="M7 17m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" />
+                                    <path d="M17 17m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" />
+                                    <path d="M5 17h-2v-4m-1 -8h11v12m-4 0h6m4 0h2v-6h-8m0 -5h5l3 5" />
+                                    <path d="M3 9l4 0" />
+                                </svg>
+                                <span class="menu-text">Shipping Manager</span>
+                            </a>
+                        </li>
                         <li class="has-submenu">
                             <a href="#" class="menu-item" data-title="Reports">
                                 <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
@@ -172,7 +187,7 @@
                                         <span class="menu-text">Delivery Status</span>
                                     </a>
                                 </li>
-
+                                <li><a href="production-email.html" class="menu-item">Production Email </a></li>
                             </ul>
                         </li>
                         <li class="has-submenu">
@@ -193,9 +208,17 @@
                                 </svg>
                             </a>
                             <ul class="submenu">
-                                <li><a href="#" class="menu-item">Fetch Orders</a></li>
+
+                                <li><a href="webserver-81.html" class="menu-item">Webserver: 82</a></li>
+                                <li><a href="webserver-82-orders-history.html" class="menu-item">82 Orders History</a>
+                                </li>
+                                <li><a href="fetch-orders-by-store.html" class="menu-item">Fetch Orders By Store</a>
+                                </li>
+                                <li><a href="fetch-orders-by-number.html" class="menu-item">Fetch Orders By Number</a>
+                                </li>
                             </ul>
                         </li>
+
                         <li class="has-submenu">
                             <a href="#" data-title="Utilities">
                                 <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
@@ -222,19 +245,46 @@
                                         </svg>
                                     </a>
                                     <ul class="submenu">
-                                        <li class="active"><a href="artwork-library-logos.html"
-                                                class="menu-item">Logos</a></li>
+                                        <li><a href="artwork-library-logos.html" class="menu-item">Logos</a></li>
                                         <li><a href="artwork-library-text.html" class="menu-item">Text</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="#" class="menu-item">Holiday List</a></li>
-                                <li><a href="#" class="menu-item">Default Values</a></li>
-                                <li><a href="#" class="menu-item">Notes</a></li>
-                                <li><a href="#" class="menu-item">Mail Recipients</a></li>
-                                <li><a href="#" class="menu-item">Item Reminder Rules</a></li>
+                                <li><a href="holiday-list.html" class="menu-item">Holiday List</a></li>
+                                <li class="has-submenu"><a href="#" class="menu-item">Settings <svg class="menu-arrow"
+                                            width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                            stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                            <polyline points="9 18 15 12 9 6"></polyline>
+                                        </svg></a>
+                                    <ul class="submenu">
+                                        <li><a href="default-values-settings.html" class="menu-item">Default Values</a>
+                                        </li>
+                                        <li><a href="notes-settings.html" class="menu-item">Notes</a></li>
+                                    </ul>
+
+                                </li>
+
+                                <li><a href="attribute-tables.html" class="menu-item">Attribute
+                                        Tables
+                                       
+                                    </a>
+                                   
+                                </li>
+
+
+                                <li><a href="item-reminder-rules.html" class="menu-item">Item Reminder Rules</a></li>
+                                <li><a href="catalogs.html" class="menu-item">Catalogs</a></li>
+                                <li><a href="manage-customer-type.html" class="menu-item">Manage Customer Type</a></li>
+                                <li><a href="catalog-mail-recipients.html" class="menu-item">Catalog Mail Recipients</a>
+                                </li>
+
+                                <li><a href="email-center.html" class="menu-item">Email Center</a></li>
+                                <li><a href="holiday-list.html" class="menu-item">Holiday List </a></li>
+                                <li><a href="price-code-list.html" class="menu-item">Price Code List </a></li>
+                                <li><a href="size-list.html" class="menu-item">Size List</a></li>
+
                             </ul>
                         </li>
-                        <li class="has-submenu">
+                        <li>
                             <a href="#" data-title="T-Hub Integrations">
                                 <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                     viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
@@ -244,17 +294,10 @@
                                     <path d="M10 3L8 21"></path>
                                     <path d="M16 3l-2 18"></path>
                                 </svg>
-                                <span class="menu-text">T-Hub Integrations</span>
-                                <svg class="menu-arrow" width="16" height="16" viewBox="0 0 24 24" fill="none"
-                                    stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                    stroke-linejoin="round">
-                                    <polyline points="9 18 15 12 9 6"></polyline>
-                                </svg>
+                                <span class="menu-text">Convert Lightspeed to T-Hub </span>
+
                             </a>
-                            <ul class="submenu">
-                                <li><a href="#" class="menu-item">USA E-Pay to T-Hub</a></li>
-                                <li><a href="#" class="menu-item">Lightspeed to T-Hub</a></li>
-                            </ul>
+
                         </li>
 
                     </ul>
@@ -292,6 +335,15 @@
 
                 </div>
                 <div class="header-right">
+                    <div class="search-order-input pui-me-15px">
+                        <input type="text" class="form-control" placeholder="Find order...">
+                        <button class="btn pui-btn-secondary pui-btn-icon">
+                            <svg class="icon" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"
+                                stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M21 21l-6-6m2-5a7 7 0 1 1-14 0 7 7 0 0 1 14 0z" />
+                            </svg>
+                        </button>
+                    </div>
                     <div class="user-info">
                         <span class="user-name">Bobby Prestridge</span>
                         <div class="user-avatar">BP</div>
@@ -428,7 +480,7 @@
                                         <tbody>
                                             <tr>
                                                 <td>
-                                                    <a href="customer-entry.html">A & M Ranch</a>
+                                                    <a href="customer-entry-edit.html">A & M Ranch</a>
                                                 </td>
                                                 <td>
                                                     <strong>Mark Johnson</strong>
@@ -487,7 +539,7 @@
                                             </tr>
                                             <tr class="data-table-row-alter">
                                                 <td>
-                                                    <a href="customer-details.html">A New Energy LLC</a>
+                                                    <a href="customer-entry-edit.html">A New Energy LLC</a>
 
                                                 </td>
                                                 <td>
@@ -546,7 +598,7 @@
                                                 </td>
                                             </tr>
                                             <tr>
-                                                <td><a href="customer-details.html">A.R.K. Ramos</a></td>
+                                                <td><a href="customer-entry-edit.html">A.R.K. Ramos</a></td>
                                                 <td><strong>Brendan Ramos</strong></td>
                                                 <td>405.235.5505</td>
                                                 <td></td>
