--- a/vendors.html
+++ b/vendors.html
@@ -505,13 +505,13 @@
                                                         <path d="M21 12c-2.4 4 -5.4 6 -9 6c-3.6 0 -6.6 -2 -9 -6c2.4 -4 5.4 -6 9 -6c3.6 0 6.6 2 9 6"></path>
                                                     </svg>
                                                 </button>
-                                                <button class="btn-action" title="Edit">
+                                                <a href="vendor-entry-edit.html" class="btn-action" title="Edit">
                                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                                         viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                                         stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                                         <path d="M17 3a2.85 2.83 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5Z">
                                                         </path>
-                                                    </svg></button>
+                                                    </svg></a>
                                                     
                                                 <button class="btn-action" title="Delete">
                                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
@@ -571,14 +571,14 @@
                                                         <path d="M21 12c-2.4 4 -5.4 6 -9 6c-3.6 0 -6.6 -2 -9 -6c2.4 -4 5.4 -6 9 -6c3.6 0 6.6 2 9 6"></path>
                                                     </svg>
                                                 </button>
-                                                <button class="btn-action" title="Edit">
+                                                <a href="vendor-entry-edit.html" class="btn-action" title="Edit">
                                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                                         viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                                         stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                                         <path d="M17 3a2.85 2.83 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5Z">
                                                         </path>
                                                     </svg>
-                                                </button>
+                                                </a>
                                                 <button class="btn-action" title="Delete">
                                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                                     viewBox="0 0 24 24" fill="none" stroke="currentColor"
@@ -629,14 +629,14 @@ Dodd City, TX 75438
                                                     <path d="M21 12c-2.4 4 -5.4 6 -9 6c-3.6 0 -6.6 -2 -9 -6c2.4 -4 5.4 -6 9 -6c3.6 0 6.6 2 9 6"></path>
                                                 </svg>
                                             </button>
-                                            <button class="btn-action" title="Edit">
+                                            <a href="vendor-entry-edit.html" class="btn-action" title="Edit">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                                     viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                                     stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                                     <path d="M17 3a2.85 2.83 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5Z">
                                                     </path>
                                                 </svg>
-                                            </button>
+                                            </a>
                                             <button class="btn-action" title="Delete">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                                 viewBox="0 0 24 24" fill="none" stroke="currentColor"
