--- a/customers.html
+++ b/customers.html
@@ -512,7 +512,7 @@
                                                                 </path>
                                                             </svg>
                                                         </button>
-                                                        <button class="btn-action" title="Edit">
+                                                        <a href="customer-entry-edit.html" class="btn-action" title="Edit">
                                                             <svg xmlns="http://www.w3.org/2000/svg" width="16"
                                                                 height="16" viewBox="0 0 24 24" fill="none"
                                                                 stroke="currentColor" stroke-width="2"
@@ -520,7 +520,7 @@
                                                                 <path
                                                                     d="M17 3a2.85 2.83 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5Z">
                                                                 </path>
-                                                            </svg></button>
+                                                            </svg></a>
 
                                                         <button class="btn-action" title="Delete">
                                                             <svg xmlns="http://www.w3.org/2000/svg" width="16"
@@ -571,7 +571,7 @@
                                                                 </path>
                                                             </svg>
                                                         </button>
-                                                        <button class="btn-action" title="Edit">
+                                                        <a href="customer-entry-edit.html" class="btn-action" title="Edit">
                                                             <svg xmlns="http://www.w3.org/2000/svg" width="16"
                                                                 height="16" viewBox="0 0 24 24" fill="none"
                                                                 stroke="currentColor" stroke-width="2"
@@ -580,7 +580,7 @@
                                                                     d="M17 3a2.85 2.83 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5Z">
                                                                 </path>
                                                             </svg>
-                                                        </button>
+                                                        </a>
                                                         <button class="btn-action" title="Delete">
                                                             <svg xmlns="http://www.w3.org/2000/svg" width="16"
                                                                 height="16" viewBox="0 0 24 24" fill="none"
@@ -617,7 +617,7 @@
                                                                 </path>
                                                             </svg>
                                                         </button>
-                                                        <button class="btn-action" title="Edit">
+                                                        <a href="customer-entry-edit.html" class="btn-action" title="Edit">
                                                             <svg xmlns="http://www.w3.org/2000/svg" width="16"
                                                                 height="16" viewBox="0 0 24 24" fill="none"
                                                                 stroke="currentColor" stroke-width="2"
@@ -626,7 +626,7 @@
                                                                     d="M17 3a2.85 2.83 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5Z">
                                                                 </path>
                                                             </svg>
-                                                        </button>
+                                                        </a>
                                                         <button class="btn-action" title="Delete">
                                                             <svg xmlns="http://www.w3.org/2000/svg" width="16"
                                                                 height="16" viewBox="0 0 24 24" fill="none"
