--- a/order-entry-new.html
+++ b/order-entry-new.html
@@ -3788,8 +3788,29 @@ margin-bottom: 0px;
                                             onclick="return openNewShipmentModal(event)">Add Shipment</button>
                                         <button class="pui-btn pui-btn-primary pui-me-10px"
                                             onclick="openBoxManagementModal()">Manage Boxes</button>
-                                        <button class="pui-btn pui-btn-secondary btn-history"
+                                        <button class="pui-btn pui-btn-secondary btn-history  pui-me-10px"
                                             onclick="openShippingHistoryModal()">History</button>
+                                            <div class="dropdown">
+                                                <button class="action-btn more-options">
+                                                    More
+                                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler-chevron-down">
+                                                        <path d="M6 9l6 6l6 -6"></path>
+                                                    </svg>
+                                                </button>
+                                                <div class="dropdown-content" style="z-index: 500;">
+                                                    <a href="#">Import Tracking</a>
+                                                    <a href="#">Export Keyed Shipping</a>
+                                                    <a href="#">Attach Shipping List</a>
+                                                    <a href="#">Edit Shipping List</a>
+                                                    <a href="#">Print Shipping List</a>
+                                                    <a href="#">Packing Slip</a>
+                                                    <a href="#">Event Pickup Slip</a>
+                                                    <a href="#">Event Packing Slip</a>
+                                                    <a href="#">Regular/ Event Slip Config</a>
+                                                    <a href="#">QB Shipping Export</a>
+                                                    <a href="#">Shipping Manager Help</a>
+                                                </div>
+                                            </div>
                                     </div>
                                 </div>
         
