--- a/attribute-tables.html
+++ b/attribute-tables.html
@@ -378,9 +378,10 @@
                             <a href="" class="pui-link">
                                 <span>Utilities</span>
                             </a>
+                            <span>Attribute Tables</span>
                         </nav>
 
-                        <h2>Attribute Tables </h2>
+                        <h2>Manage Attribute Tables </h2>
                     </div>
                     <div class="listing-header-right">
 
