--- a/vendor-entry-edit.html
+++ b/vendor-entry-edit.html
@@ -386,7 +386,9 @@
                         <p class="text-muted pui-me-10px"><i>Created: 03/30/2018</i></p>
                         <div class="action-buttons">
                             
-                      
+                      <button class="action-btn view-order">
+                        Refresh Sales Total
+                      </button>
                             <button class="action-btn close-order">
                                 Delete
                             </button>
